gcc 4.1.2: fix three issues breaking the build.

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b103

      Several casts to size_t missing in g1CollectorPolicy.cpp after "8138975: G1CollectorPolicy::calculate_young_list_target_length should be const" http://hg.openjdk.java.net/jdk9/hs-rt/hotspot/rev/4b28e0afd0c0

      No newline at end of file in concurrentG1RefineThread.cpp after "8138920: Refactor the sampling thread from ConcurrentG1RefineThread"
      http://hg.openjdk.java.net/jdk9/hs-rt/hotspot/rev/c664861faadc

      A cast to size_t missing in g1CollectorPolicy.cpp:479 after "8138684: G1 decision about taking regions into the collection set is too aggressive" http://hg.openjdk.java.net/jdk9/hs-rt/hotspot/rev/cc1666a28b88

            Assignee:
            Goetz Lindenmaier
            Reporter:
            Goetz Lindenmaier
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: