8143215: gcc 4.1.2: fix three issues breaking the build

Also fix some more recent introduced missing casts.

Reviewed-by: stuefe, simonis, kbarrett, tschatzl